deployments/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tms-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tms-auth
  template:
    metadata:
      labels:
        app: tms-auth
    spec:
      containers:
      - name: tms-auth
        image: zubairashraf/tms-auth-service
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: tms-auth
  ports:
    - name: tms-auth
      protocol: TCP
      port: 80
      targetPort: 3000
