deployments/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tms-client-deployment
spec:
  selector:
    matchLabels:
      app: tms-auth
  template:
    metadata:
      labels:
        app: tms-auth
    spec:
      containers:
      - name: tms-auth
        image: zubairashraf/tms-app
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tms-client-service
spec:
  selector:
    app: tms-app
  ports:
    - name: tms-app
      protocol: TCP
      port: 80
      targetPort: 3000
