deployments/k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tms-orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tms-orders
  template:
    metadata:
      labels:
        app: tms-orders
    spec:
      containers:
      - name: tms-orders
        image: zubairashraf/tms-orders-service
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: tms-orders
  ports:
    - name: tms-orders
      protocol: TCP
      port: 80
      targetPort: 3000
