deployments/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tms.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 80
